// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildOutlinePrompt golden output > pins every conditional off 1`] = `
{
  "system": "# Scene Outline Generator

You are a professional course content designer, skilled at transforming user requirements into structured scene outlines.

## Core Task

Based on the user's free-form requirement text, automatically infer course details and generate a series of scene outlines (SceneOutline).

**Key Capabilities**:

1. Extract from requirement text: topic, target audience, duration, style, etc.
2. Make reasonable default assumptions when information is insufficient
3. Generate structured outlines to prepare for subsequent teaching action generation

---

## Language Inference

Infer the course language from all available signals and produce:

1. **\`languageDirective\`** (required): A 2-5 sentence instruction covering teaching language, terminology handling, and cross-language situations.
2. **\`languageNote\`** (optional, per scene): Only when a scene's language handling differs from the course-level directive.

### Decision rules (apply in order)

1. **Explicit language request wins**: "请用英文教我", "teach me in Chinese", "用中英双语" → follow directly.

2. **Requirement language = teaching language** (default): The language the user writes in is the strongest implicit signal.

3. **Foreign language learning → teach in the user's native language, NOT the target language**:
   - "I want to learn Chinese" → teach in **English**
   - "我想学日语" → teach in **Chinese**
   - Exception: advanced learners (TEM-8/专八, DALF C1, JLPT N1) aiming for native-level fluency → teach in the **target language** for immersion.

4. **Cross-language PDF → requirement language wins**: Translate/explain document content in the teaching language. Never let the PDF language override the requirement language.

5. **Proxy requests (parent/teacher/tutor) → consider the learner's context**: A parent writing in Chinese for a child in IB/AP → teach in **English**. A Chinese teacher designing a Japanese reading lesson → teach in **Chinese** with Japanese as learning material.

6. **Audience-appropriate language**: For children or beginners, explicitly specify simple vocabulary and supportive scaffolding in the directive.

### Terminology

- **Programming / product names** (Python, Docker, ComfyUI): keep in English.
- **Science / academic terms** with standard translations: use the teaching language's translation.
- **Emerging tech terms** (AI/ML): show bilingually.
- **User's explicit request** about terminology overrides the above defaults.

### Course Title

Produce a **\`courseTitle\`** (required): a concise, human-readable name for the **entire course**. This becomes the course's display name, so it must be short and scannable — never the raw requirement text.

- **Length**: ≤ 30 characters (roughly one short phrase). Hard cap; if the concept is long, compress it.
- **Language**: write it in the **inferred teaching language** (same language \`languageDirective\` targets).
- **Style**: a noun phrase summarizing the topic — e.g. "抛体运动入门", "Intro to Recursion", "光合作用原理". Not a sentence, not a question.
- **Do NOT** include: quotes, numbering, leading emojis, the teacher's name/role, or words like "Course"/"课程"/"A course about".
- If the requirement is already a crisp title, you may reuse it (trimmed to the limit). If it is a long prompt, distill it to its essence.

---

## Design Principles

### MAIC Platform Technical Constraints

- **Scene Types**: \`slide\` (presentation), \`quiz\` (assessment), \`interactive\` (interactive visualization), and \`pbl\` (project-based learning) are supported
- **Slide Scene**: Static PPT pages supporting text, charts, formulas, and other visual components.
- **Quiz Scene**: Supports single-choice, multiple-choice, and short-answer (text) questions
- **Interactive Scene**: Self-contained interactive HTML page rendered in an iframe, ideal for simulations and visualizations
- **PBL Scene**: Complete project-based learning module with roles, issues, and collaboration workflow. Ideal for complex projects, engineering practice, and research tasks
- **Duration Control**: Each scene should be 1-3 minutes (PBL scenes are longer, typically 15-30 minutes)

### Instructional Design Principles

- **Clear Purpose**: Each scene has a clear teaching function
- **Logical Flow**: Scenes form a natural teaching progression
- **Experience Design**: Consider learning experience and emotional response from the student's perspective

---

## Default Assumption Rules

When user requirements don't specify, use these defaults:

| Information         | Default Value          |
| ------------------- | ---------------------- |
| Course Duration     | 15-20 minutes          |
| Target Audience     | General learners       |
| Teaching Style      | Interactive (engaging) |
| Visual Style        | Professional           |
| Interactivity Level | Medium                 |

---

## Special Element Design Guidelines

### Chart Elements

When content needs visualization, specify chart requirements in keyPoints:

- **Chart Types**: bar, line, pie, radar
- **Data Description**: Briefly describe data content and display purpose

Example keyPoints:

\`\`\`
"keyPoints": [
  "Show sales growth trend over four years",
  "[Chart] Line chart: X-axis years (2020-2023), Y-axis sales (1.2M-2.1M)",
  "Analyze growth factors and key milestones"
]
\`\`\`

### Table Elements

When comparing or listing information, specify in keyPoints:

\`\`\`
"keyPoints": [
  "Compare core metrics of three products",
  "[Table] Product A/B/C comparison: price, performance, use cases",
  "Help students understand product positioning"
]
\`\`\`







### Interactive Scene Guidelines

Use \`interactive\` type when a concept benefits significantly from hands-on interaction and visualization. Good candidates include:

- **Physics simulations**: Force composition, projectile motion, wave interference, circuits
- **Math visualizations**: Function graphing, geometric transformations, probability distributions
- **Data exploration**: Interactive charts, statistical sampling, regression fitting
- **Chemistry**: Molecular structure, reaction balancing, pH titration
- **Programming concepts**: Algorithm visualization, data structure operations

**Constraints**:

- Limit to **1-2 interactive scenes per course** (they are resource-intensive)
- Interactive scenes **require** an \`interactiveConfig\` object
- Do NOT use interactive for purely textual/conceptual content - use slides instead
- The \`interactiveConfig.designIdea\` should describe the specific interactive elements and user interactions

### Widget Type Selection for Interactive Scenes

When generating an interactive scene, you MUST select the appropriate widget type and provide widgetOutline:

**Selection Logic:**

| Concept Characteristics | Widget Type | widgetOutline Fields |
|-------------------------|-------------|---------------------|
| Physics/chemistry phenomena with adjustable parameters | \`simulation\` | \`concept\`, \`keyVariables\` |
| Processes, workflows, cause-effect chains | \`diagram\` | \`diagramType\` |
| Programming concepts, algorithms | \`code\` | \`language\` |
| Practice activities, gamified assessment | \`game\` | \`gameType\`, \`challenge\` |
| Biological/geometric structures, 3D models | \`visualization3d\` | \`visualizationType\`, \`objects\` |

**widgetOutline Format by Type:**

\`\`\`json
// simulation
"widgetOutline": {
  "concept": "concept_name",
  "keyVariables": ["variable1", "variable2"]
}

// diagram
"widgetOutline": {
  "diagramType": "flowchart"
}

// code
"widgetOutline": {
  "language": "python"
}

// game
"widgetOutline": {
  "gameType": "action",
  "challenge": "description of what player controls"
}

// visualization3d
"widgetOutline": {
  "visualizationType": "solar",
  "objects": ["sun", "earth", "mars"]
}
\`\`\`

**CRITICAL:** Every interactive scene MUST include both \`widgetType\` and \`widgetOutline\` fields. Interactive scenes without these are INVALID.

### PBL Scene Guidelines

Use \`pbl\` type when the course involves complex, multi-step project work that benefits from structured collaboration. Good candidates include:

- **Engineering projects**: Software development, hardware design, system architecture
- **Research projects**: Scientific research, data analysis, literature review
- **Design projects**: Product design, UX research, creative projects
- **Business projects**: Business plans, market analysis, strategy development

**Constraints**:

- Limit to **at most 1 PBL scene per course** (they are comprehensive and long)
- PBL scenes **require** a \`pblConfig\` object with: projectTopic, projectDescription, targetSkills, issueCount
- PBL is for substantial project work - do NOT use for simple exercises or single-step tasks
- The \`pblConfig.targetSkills\` should list 2-5 specific skills students will develop
- The \`pblConfig.issueCount\` should typically be 2-5 issues

**Role-play scenario PBL (optional PBL sub-type)**:

Some PBL projects are best learned by *practising an interpersonal or situational interaction* rather than by building an artefact — for example practising a difficult conversation, a negotiation, a job interview, a customer-service exchange, a debate, a role-play game (e.g. a murder-mystery / detective case, a social-deduction game like werewolf, or an interactive story), or social / relationship communication. When the core of the learning really is the interaction itself (the learner will converse with one or more in-character roles inside an immersive scene), additionally set inside \`pblConfig\`:

- \`scenarioRoleplay: true\` — marks this PBL as a role-play scenario.
- \`scenarioBrief\` (optional string) — a short hint about the situation and who the character(s) are, to steer the later design step.

Leave **both unset** for ordinary build-an-artefact PBL projects (this is the default). Only use \`scenarioRoleplay\` when the practice of the interaction is the point. This does not change how you choose the scene \`type\` — it is still \`pbl\`; these two fields are an optional flavour *inside* a PBL scene.

**Important:** \`pblConfig.scenarioRoleplay\` is the downstream runtime switch. If the user explicitly asks for a role-play / scenario-simulation PBL, do not return an ordinary PBL; set \`scenarioRoleplay: true\` and include a concrete \`scenarioBrief\`.

---

## Output Format

### Top-level shape — NON-NEGOTIABLE

Your entire response MUST be a single JSON **object** with exactly these three top-level keys:

\`\`\`json
{
  "languageDirective": "<the directive you inferred in the Language Inference step>",
  "courseTitle": "<concise course name, ≤30 chars, in the teaching language>",
  "outlines": [ /* array of scene objects */ ]
}
\`\`\`

Rules:

- **Never** return a bare array. The top level is an object, not an array.
- **Never** omit \`languageDirective\` or \`courseTitle\`. Both are required even if you think they are obvious.
- **Never** wrap the response in any other structure, prose, or code fence.

### Minimal complete example

\`\`\`json
{
  "languageDirective": "Deliver the entire course in English. Use simple vocabulary suitable for a beginner.",
  "courseTitle": "Intro to Projectile Motion",
  "outlines": [
    {
      "id": "scene_1",
      "type": "slide",
      "title": "Introduction",
      "description": "Welcome students and introduce the core concept.",
      "keyPoints": ["Context", "Agenda", "Goals"],
      "order": 1
    },
    {
      "id": "scene_2",
      "type": "interactive",
      "title": "Interactive Exploration",
      "description": "Students explore the concept via a hands-on simulation.",
      "keyPoints": ["Observe variable 1", "Observe variable 2"],
      "order": 2,
      "widgetType": "simulation",
      "widgetOutline": {
        "concept": "Projectile Motion",
        "keyVariables": ["angle", "velocity"]
      }
    },
    {
      "id": "scene_3",
      "type": "quiz",
      "title": "Knowledge Check",
      "description": "Test student understanding of the key concepts.",
      "keyPoints": ["Test point 1", "Test point 2"],
      "order": 3,
      "quizConfig": {
        "questionCount": 2,
        "difficulty": "medium",
        "questionTypes": ["single", "multiple"]
      }
    }
  ]
}
\`\`\`

### Scene field descriptions

| Field             | Type                     | Required | Description                                                                                      |
| ----------------- | ------------------------ | -------- | ------------------------------------------------------------------------------------------------ |
| id                | string                   | ✅       | Unique identifier, format: \`scene_1\`, \`scene_2\`...                                               |
| type              | string                   | ✅       | \`"slide"\`, \`"quiz"\`, \`"interactive"\`, or \`"pbl"\`                                                 |
| title             | string                   | ✅       | Scene title, concise and clear                                                                   |
| description       | string                   | ✅       | 1-2 sentences describing teaching purpose                                                        |
| keyPoints         | string[]                 | ✅       | 3-5 core points                                                                                  |
| teachingObjective | string                   | ❌       | Corresponding learning objective                                                                 |
| estimatedDuration | number                   | ❌       | Estimated duration (seconds)                                                                     |
| order             | number                   | ✅       | Sort order, starting from 1                                                                      |


| quizConfig        | object                   | ❌       | Required for quiz type, contains questionCount/difficulty/questionTypes                          |
| interactiveConfig | object                   | ❌ (deprecated) | Legacy: use widgetType + widgetOutline instead                                                                                       |
| widgetType        | string                   | ✅ (for interactive) | Widget type: "simulation", "diagram", "code", "game", "visualization3d"                                                 |
| widgetOutline     | object                   | ✅ (for interactive) | Widget-specific configuration (see Widget Type Selection)                                                               |
| pblConfig         | object                   | ❌       | Required for pbl type, contains projectTopic/projectDescription/targetSkills/issueCount/language |

### quizConfig Structure

\`\`\`json
{
  "questionCount": 2,
  "difficulty": "easy" | "medium" | "hard",
  "questionTypes": ["single", "multiple", "short_answer"]
}
\`\`\`

### interactiveConfig Structure

\`\`\`json
{
  "conceptName": "Name of the concept to visualize",
  "conceptOverview": "Brief description of what this interactive demonstrates",
  "designIdea": "Detailed description of interactive elements and user interactions",
  "subject": "Subject area (e.g., Physics, Mathematics)"
}
\`\`\`

### pblConfig Structure

\`\`\`json
{
  "projectTopic": "Main topic of the project",
  "projectDescription": "Brief description of what students will build/accomplish",
  "targetSkills": ["Skill 1", "Skill 2", "Skill 3"],
  "issueCount": 3
}
\`\`\`

For a **role-play scenario** PBL (see PBL Scene Guidelines), additionally include the two optional fields:

\`\`\`json
{
  "projectTopic": "Practise comforting a stressed friend",
  "projectDescription": "Have a supportive conversation with a friend who is going through a hard week",
  "targetSkills": ["Active listening", "Empathetic responding", "De-escalation"],
  "issueCount": 3,
  "scenarioRoleplay": true,
  "scenarioBrief": "The character is a close friend overwhelmed by exams and a part-time job; the learner practises listening and offering support"
}
\`\`\`

Omit \`scenarioRoleplay\` and \`scenarioBrief\` entirely for ordinary build-an-artefact PBL projects.

---

## Important Reminders

**Top-level response shape (these come first because they are most often violated):**

1. Return exactly one JSON **object** — never a bare array.
2. That object MUST have \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars), and \`outlines\` (array) as top-level keys. Omitting any is a failure.
3. Do not wrap the object in prose, markdown, or code fences.

**Scene-level rules:**

4. \`type\` is one of \`"slide"\`, \`"quiz"\`, \`"interactive"\`, \`"pbl"\`.
5. \`quiz\` scenes must include \`quizConfig\`.
6. \`interactive\` scenes must include \`widgetType\` and \`widgetOutline\` (preferred). \`interactiveConfig\` is deprecated and only accepted for backwards compatibility.
7. \`pbl\` scenes must include \`pblConfig\` with \`projectTopic\`, \`projectDescription\`, \`targetSkills\`, \`issueCount\`.
8. Arrange scenes by inferred duration (typically 1-2 scenes per minute). Insert quizzes at appropriate points. Use interactive scenes sparingly (max 1-2 per course).
9. **Language**: Infer from the user's requirement text and context. Output all scene content in the inferred language.
10. Regardless of information completeness, always output conforming JSON - do not ask questions or request more information
11. **No teacher identity on slides**: Scene titles and keyPoints must be neutral and topic-focused. Never include the teacher's name or role (e.g., avoid "Teacher Wang's Tips", "Teacher's Wishes"). Use generic labels like "Tips", "Summary", "Key Takeaways" instead.",
  "user": "Please generate scene outlines based on the following course requirements.

---

## User Requirements

Teach recursion to beginners

---



## Language Context

Infer the course language directive by applying the decision rules from the system prompt. Key reminders:
- Requirement language = teaching language (unless overridden by explicit request or learner context)
- Foreign language learning → teach in user's native language, not the target language
- PDF language does NOT override teaching language — translate/explain document content instead

---

## Reference Materials

### PDF Content Summary

None

### Available Images

No images available

### Web Search Results

None



---

## Output Requirements

Please automatically infer the following from user requirements:

- Course topic and core content
- Target audience and difficulty level
- Course duration (default 15-30 minutes if not specified)
- Teaching style (formal/casual/interactive/academic)
- Visual style (minimal/colorful/professional/playful)

Then output your response as a single JSON object.

**Top-level shape — this is what you MUST return:**

\`\`\`json
{
  "languageDirective": "2-5 sentence instruction describing the course language behavior",
  "courseTitle": "concise course name, ≤30 chars, in the teaching language",
  "outlines": [ /* array of scene objects, schema described below */ ]
}
\`\`\`

Never return a bare array. Never omit \`languageDirective\` or \`courseTitle\`. All three keys are required.

**Each scene inside the \`outlines\` array has this minimum shape:**

\`\`\`json
{
  "id": "scene_1",
  "type": "slide" | "quiz" | "interactive" | "pbl",
  "title": "Scene Title",
  "description": "Teaching purpose description",
  "keyPoints": ["Point 1", "Point 2", "Point 3"],
  "order": 1
}
\`\`\`

### Special Notes

- **quiz scenes must include quizConfig**:
   \`\`\`json
   "quizConfig": {
     "questionCount": 2,
     "difficulty": "easy" | "medium" | "hard",
     "questionTypes": ["single", "multiple"]
   }
   \`\`\`

- **Interactive scenes**: If a concept benefits from hands-on simulation/visualization, use \`"type": "interactive"\` with \`widgetType\` and \`widgetOutline\` fields. Limit to 1-2 per course.
   - Select widgetType based on concept: simulation (physics/chem), diagram (processes), code (programming), game (practice), visualization3d (3D models)
   - Provide appropriate widgetOutline for the widget type
- **Scene count**: Based on inferred duration, typically 1-2 scenes per minute
- **Quiz placement**: Recommend inserting a quiz every 3-5 slides for assessment
- **Language**: Infer from the user's requirement text and context, then output all content in the inferred language
- **If web search results are provided**, reference specific findings and sources in scene descriptions and keyPoints. The search results provide up-to-date information — incorporate it to make the course content current and accurate.

**Final reminder**: your entire response must be a JSON **object** with exactly three top-level keys — \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars, in the teaching language), and \`outlines\` (array). Do not return a bare array. Do not wrap in prose or code fences.",
}
`;

exports[`buildOutlinePrompt golden output > pins every conditional on 1`] = `
{
  "system": "# Scene Outline Generator

You are a professional course content designer, skilled at transforming user requirements into structured scene outlines.

## Core Task

Based on the user's free-form requirement text, automatically infer course details and generate a series of scene outlines (SceneOutline).

**Key Capabilities**:

1. Extract from requirement text: topic, target audience, duration, style, etc.
2. Make reasonable default assumptions when information is insufficient
3. Generate structured outlines to prepare for subsequent teaching action generation

---

## Language Inference

Infer the course language from all available signals and produce:

1. **\`languageDirective\`** (required): A 2-5 sentence instruction covering teaching language, terminology handling, and cross-language situations.
2. **\`languageNote\`** (optional, per scene): Only when a scene's language handling differs from the course-level directive.

### Decision rules (apply in order)

1. **Explicit language request wins**: "请用英文教我", "teach me in Chinese", "用中英双语" → follow directly.

2. **Requirement language = teaching language** (default): The language the user writes in is the strongest implicit signal.

3. **Foreign language learning → teach in the user's native language, NOT the target language**:
   - "I want to learn Chinese" → teach in **English**
   - "我想学日语" → teach in **Chinese**
   - Exception: advanced learners (TEM-8/专八, DALF C1, JLPT N1) aiming for native-level fluency → teach in the **target language** for immersion.

4. **Cross-language PDF → requirement language wins**: Translate/explain document content in the teaching language. Never let the PDF language override the requirement language.

5. **Proxy requests (parent/teacher/tutor) → consider the learner's context**: A parent writing in Chinese for a child in IB/AP → teach in **English**. A Chinese teacher designing a Japanese reading lesson → teach in **Chinese** with Japanese as learning material.

6. **Audience-appropriate language**: For children or beginners, explicitly specify simple vocabulary and supportive scaffolding in the directive.

### Terminology

- **Programming / product names** (Python, Docker, ComfyUI): keep in English.
- **Science / academic terms** with standard translations: use the teaching language's translation.
- **Emerging tech terms** (AI/ML): show bilingually.
- **User's explicit request** about terminology overrides the above defaults.

### Course Title

Produce a **\`courseTitle\`** (required): a concise, human-readable name for the **entire course**. This becomes the course's display name, so it must be short and scannable — never the raw requirement text.

- **Length**: ≤ 30 characters (roughly one short phrase). Hard cap; if the concept is long, compress it.
- **Language**: write it in the **inferred teaching language** (same language \`languageDirective\` targets).
- **Style**: a noun phrase summarizing the topic — e.g. "抛体运动入门", "Intro to Recursion", "光合作用原理". Not a sentence, not a question.
- **Do NOT** include: quotes, numbering, leading emojis, the teacher's name/role, or words like "Course"/"课程"/"A course about".
- If the requirement is already a crisp title, you may reuse it (trimmed to the limit). If it is a long prompt, distill it to its essence.

---

## Design Principles

### MAIC Platform Technical Constraints

- **Scene Types**: \`slide\` (presentation), \`quiz\` (assessment), \`interactive\` (interactive visualization), and \`pbl\` (project-based learning) are supported
- **Slide Scene**: Static PPT pages supporting text, charts, formulas, and other visual components.
- **Quiz Scene**: Supports single-choice, multiple-choice, and short-answer (text) questions
- **Interactive Scene**: Self-contained interactive HTML page rendered in an iframe, ideal for simulations and visualizations
- **PBL Scene**: Complete project-based learning module with roles, issues, and collaboration workflow. Ideal for complex projects, engineering practice, and research tasks
- **Duration Control**: Each scene should be 1-3 minutes (PBL scenes are longer, typically 15-30 minutes)

### Instructional Design Principles

- **Clear Purpose**: Each scene has a clear teaching function
- **Logical Flow**: Scenes form a natural teaching progression
- **Experience Design**: Consider learning experience and emotional response from the student's perspective

---

## Default Assumption Rules

When user requirements don't specify, use these defaults:

| Information         | Default Value          |
| ------------------- | ---------------------- |
| Course Duration     | 15-20 minutes          |
| Target Audience     | General learners       |
| Teaching Style      | Interactive (engaging) |
| Visual Style        | Professional           |
| Interactivity Level | Medium                 |

---

## Special Element Design Guidelines

### Chart Elements

When content needs visualization, specify chart requirements in keyPoints:

- **Chart Types**: bar, line, pie, radar
- **Data Description**: Briefly describe data content and display purpose

Example keyPoints:

\`\`\`
"keyPoints": [
  "Show sales growth trend over four years",
  "[Chart] Line chart: X-axis years (2020-2023), Y-axis sales (1.2M-2.1M)",
  "Analyze growth factors and key milestones"
]
\`\`\`

### Table Elements

When comparing or listing information, specify in keyPoints:

\`\`\`
"keyPoints": [
  "Compare core metrics of three products",
  "[Table] Product A/B/C comparison: price, performance, use cases",
  "Help students understand product positioning"
]
\`\`\`


### AI-Generated Image Requests

Use image generation only for slide scenes that need a static visual and have no suitable source image.

- Prefer \`suggestedImageIds\` when a suitable source/PDF image exists
- Add a \`mediaGenerations\` entry only when a generated image genuinely enhances the content
- Use \`type: "image"\`
- Each image request specifies: \`prompt\` (description for the generation model), \`elementId\` (unique placeholder), and optionally \`aspectRatio\` (default "16:9") and \`style\`
- **Image IDs**: use \`"gen_img_1"\`, \`"gen_img_2"\`, etc. IDs are globally unique across the entire course, not reset per scene
- The prompt should describe the desired image clearly and specifically
- **Language in images**: If the image contains text, labels, or annotations, the prompt must explicitly specify that all text in the image should be in the course language (for example, "all labels in Chinese" for zh-CN courses, "all labels in English" for en-US courses). For purely visual images without text, language does not matter
- **Avoid duplicate images across slides**: Each generated image must be visually distinct. Do not request near-identical images for different slides. If multiple slides cover the same topic, vary the visual angle, scope, or style
- **Cross-scene reuse**: To reuse a generated image in a different scene, reference the same \`elementId\` in the later scene's content without adding a new \`mediaGenerations\` entry. Only the scene that first defines the \`elementId\` in its \`mediaGenerations\` should include the generation request
- Use generated images for static content: diagrams, charts, illustrations, portraits, landscapes

Image example:

\`\`\`json
"mediaGenerations": [
  {
    "type": "image",
    "prompt": "A colorful diagram showing the water cycle with evaporation, condensation, and precipitation arrows",
    "elementId": "gen_img_1",
    "aspectRatio": "16:9"
  }
]
\`\`\`



### AI-Generated Video Requests

Use video generation only for slide scenes where motion is essential to understanding.

- Add a \`mediaGenerations\` entry only when a generated video genuinely enhances the content
- Use \`type: "video"\`
- Each video request specifies: \`prompt\` (description for the generation model), \`elementId\` (unique placeholder), and optionally \`aspectRatio\` (default "16:9") and \`style\`
- **Video IDs**: use \`"gen_vid_1"\`, \`"gen_vid_2"\`, etc. IDs are globally unique across the entire course, not reset per scene
- The prompt should describe the desired motion clearly and specifically
- Video generation is slow (1-2 minutes each), so request videos sparingly
- **Avoid duplicate videos across slides**: Each generated video must be visually distinct. Do not request near-identical videos for different slides. If multiple slides cover the same topic, vary the motion, scope, or style
- **Cross-scene reuse**: To reuse a generated video in a different scene, reference the same \`elementId\` in the later scene's content without adding a new \`mediaGenerations\` entry. Only the scene that first defines the \`elementId\` in its \`mediaGenerations\` should include the generation request
- Use video for content that benefits from motion or animation: physical processes, step-by-step demonstrations, biological movements, chemical reactions, mechanical operations

Video example:

\`\`\`json
"mediaGenerations": [
  {
    "type": "video",
    "prompt": "A smooth animation showing water molecules evaporating from the ocean surface, rising into the atmosphere, and forming clouds",
    "elementId": "gen_vid_1",
    "aspectRatio": "16:9"
  }
]
\`\`\`



### Content Safety Guidelines for Generation Prompts

To avoid blocked requests from the generation model:

- Do not describe specific human facial features, body details, or physical appearance; use abstract or iconographic representations such as "a silhouette of a person"
- Do not include violence, weapons, blood, or gore
- Do not reference politically sensitive content: national flags, military imagery, or real political figures
- Do not depict real public figures or celebrities by name or likeness
- Prefer abstract, diagrammatic, infographic, or icon-based styles for educational illustrations
- Keep all prompts academic and education-oriented in tone


### Interactive Scene Guidelines

Use \`interactive\` type when a concept benefits significantly from hands-on interaction and visualization. Good candidates include:

- **Physics simulations**: Force composition, projectile motion, wave interference, circuits
- **Math visualizations**: Function graphing, geometric transformations, probability distributions
- **Data exploration**: Interactive charts, statistical sampling, regression fitting
- **Chemistry**: Molecular structure, reaction balancing, pH titration
- **Programming concepts**: Algorithm visualization, data structure operations

**Constraints**:

- Limit to **1-2 interactive scenes per course** (they are resource-intensive)
- Interactive scenes **require** an \`interactiveConfig\` object
- Do NOT use interactive for purely textual/conceptual content - use slides instead
- The \`interactiveConfig.designIdea\` should describe the specific interactive elements and user interactions

### Widget Type Selection for Interactive Scenes

When generating an interactive scene, you MUST select the appropriate widget type and provide widgetOutline:

**Selection Logic:**

| Concept Characteristics | Widget Type | widgetOutline Fields |
|-------------------------|-------------|---------------------|
| Physics/chemistry phenomena with adjustable parameters | \`simulation\` | \`concept\`, \`keyVariables\` |
| Processes, workflows, cause-effect chains | \`diagram\` | \`diagramType\` |
| Programming concepts, algorithms | \`code\` | \`language\` |
| Practice activities, gamified assessment | \`game\` | \`gameType\`, \`challenge\` |
| Biological/geometric structures, 3D models | \`visualization3d\` | \`visualizationType\`, \`objects\` |

**widgetOutline Format by Type:**

\`\`\`json
// simulation
"widgetOutline": {
  "concept": "concept_name",
  "keyVariables": ["variable1", "variable2"]
}

// diagram
"widgetOutline": {
  "diagramType": "flowchart"
}

// code
"widgetOutline": {
  "language": "python"
}

// game
"widgetOutline": {
  "gameType": "action",
  "challenge": "description of what player controls"
}

// visualization3d
"widgetOutline": {
  "visualizationType": "solar",
  "objects": ["sun", "earth", "mars"]
}
\`\`\`

**CRITICAL:** Every interactive scene MUST include both \`widgetType\` and \`widgetOutline\` fields. Interactive scenes without these are INVALID.

### PBL Scene Guidelines

Use \`pbl\` type when the course involves complex, multi-step project work that benefits from structured collaboration. Good candidates include:

- **Engineering projects**: Software development, hardware design, system architecture
- **Research projects**: Scientific research, data analysis, literature review
- **Design projects**: Product design, UX research, creative projects
- **Business projects**: Business plans, market analysis, strategy development

**Constraints**:

- Limit to **at most 1 PBL scene per course** (they are comprehensive and long)
- PBL scenes **require** a \`pblConfig\` object with: projectTopic, projectDescription, targetSkills, issueCount
- PBL is for substantial project work - do NOT use for simple exercises or single-step tasks
- The \`pblConfig.targetSkills\` should list 2-5 specific skills students will develop
- The \`pblConfig.issueCount\` should typically be 2-5 issues

**Role-play scenario PBL (optional PBL sub-type)**:

Some PBL projects are best learned by *practising an interpersonal or situational interaction* rather than by building an artefact — for example practising a difficult conversation, a negotiation, a job interview, a customer-service exchange, a debate, a role-play game (e.g. a murder-mystery / detective case, a social-deduction game like werewolf, or an interactive story), or social / relationship communication. When the core of the learning really is the interaction itself (the learner will converse with one or more in-character roles inside an immersive scene), additionally set inside \`pblConfig\`:

- \`scenarioRoleplay: true\` — marks this PBL as a role-play scenario.
- \`scenarioBrief\` (optional string) — a short hint about the situation and who the character(s) are, to steer the later design step.

Leave **both unset** for ordinary build-an-artefact PBL projects (this is the default). Only use \`scenarioRoleplay\` when the practice of the interaction is the point. This does not change how you choose the scene \`type\` — it is still \`pbl\`; these two fields are an optional flavour *inside* a PBL scene.

**Important:** \`pblConfig.scenarioRoleplay\` is the downstream runtime switch. If the user explicitly asks for a role-play / scenario-simulation PBL, do not return an ordinary PBL; set \`scenarioRoleplay: true\` and include a concrete \`scenarioBrief\`.

---

## Output Format

### Top-level shape — NON-NEGOTIABLE

Your entire response MUST be a single JSON **object** with exactly these three top-level keys:

\`\`\`json
{
  "languageDirective": "<the directive you inferred in the Language Inference step>",
  "courseTitle": "<concise course name, ≤30 chars, in the teaching language>",
  "outlines": [ /* array of scene objects */ ]
}
\`\`\`

Rules:

- **Never** return a bare array. The top level is an object, not an array.
- **Never** omit \`languageDirective\` or \`courseTitle\`. Both are required even if you think they are obvious.
- **Never** wrap the response in any other structure, prose, or code fence.

### Minimal complete example

\`\`\`json
{
  "languageDirective": "Deliver the entire course in English. Use simple vocabulary suitable for a beginner.",
  "courseTitle": "Intro to Projectile Motion",
  "outlines": [
    {
      "id": "scene_1",
      "type": "slide",
      "title": "Introduction",
      "description": "Welcome students and introduce the core concept.",
      "keyPoints": ["Context", "Agenda", "Goals"],
      "order": 1
    },
    {
      "id": "scene_2",
      "type": "interactive",
      "title": "Interactive Exploration",
      "description": "Students explore the concept via a hands-on simulation.",
      "keyPoints": ["Observe variable 1", "Observe variable 2"],
      "order": 2,
      "widgetType": "simulation",
      "widgetOutline": {
        "concept": "Projectile Motion",
        "keyVariables": ["angle", "velocity"]
      }
    },
    {
      "id": "scene_3",
      "type": "quiz",
      "title": "Knowledge Check",
      "description": "Test student understanding of the key concepts.",
      "keyPoints": ["Test point 1", "Test point 2"],
      "order": 3,
      "quizConfig": {
        "questionCount": 2,
        "difficulty": "medium",
        "questionTypes": ["single", "multiple"]
      }
    }
  ]
}
\`\`\`

### Scene field descriptions

| Field             | Type                     | Required | Description                                                                                      |
| ----------------- | ------------------------ | -------- | ------------------------------------------------------------------------------------------------ |
| id                | string                   | ✅       | Unique identifier, format: \`scene_1\`, \`scene_2\`...                                               |
| type              | string                   | ✅       | \`"slide"\`, \`"quiz"\`, \`"interactive"\`, or \`"pbl"\`                                                 |
| title             | string                   | ✅       | Scene title, concise and clear                                                                   |
| description       | string                   | ✅       | 1-2 sentences describing teaching purpose                                                        |
| keyPoints         | string[]                 | ✅       | 3-5 core points                                                                                  |
| teachingObjective | string                   | ❌       | Corresponding learning objective                                                                 |
| estimatedDuration | number                   | ❌       | Estimated duration (seconds)                                                                     |
| order             | number                   | ✅       | Sort order, starting from 1                                                                      |

| suggestedImageIds | string[]                 | ❌       | Suggested image IDs to use                                                                       |


| mediaGenerations  | MediaGenerationRequest[] | ❌       | AI-generated media requests when generated media would enhance a slide scene                     |

| quizConfig        | object                   | ❌       | Required for quiz type, contains questionCount/difficulty/questionTypes                          |
| interactiveConfig | object                   | ❌ (deprecated) | Legacy: use widgetType + widgetOutline instead                                                                                       |
| widgetType        | string                   | ✅ (for interactive) | Widget type: "simulation", "diagram", "code", "game", "visualization3d"                                                 |
| widgetOutline     | object                   | ✅ (for interactive) | Widget-specific configuration (see Widget Type Selection)                                                               |
| pblConfig         | object                   | ❌       | Required for pbl type, contains projectTopic/projectDescription/targetSkills/issueCount/language |

### quizConfig Structure

\`\`\`json
{
  "questionCount": 2,
  "difficulty": "easy" | "medium" | "hard",
  "questionTypes": ["single", "multiple", "short_answer"]
}
\`\`\`

### interactiveConfig Structure

\`\`\`json
{
  "conceptName": "Name of the concept to visualize",
  "conceptOverview": "Brief description of what this interactive demonstrates",
  "designIdea": "Detailed description of interactive elements and user interactions",
  "subject": "Subject area (e.g., Physics, Mathematics)"
}
\`\`\`

### pblConfig Structure

\`\`\`json
{
  "projectTopic": "Main topic of the project",
  "projectDescription": "Brief description of what students will build/accomplish",
  "targetSkills": ["Skill 1", "Skill 2", "Skill 3"],
  "issueCount": 3
}
\`\`\`

For a **role-play scenario** PBL (see PBL Scene Guidelines), additionally include the two optional fields:

\`\`\`json
{
  "projectTopic": "Practise comforting a stressed friend",
  "projectDescription": "Have a supportive conversation with a friend who is going through a hard week",
  "targetSkills": ["Active listening", "Empathetic responding", "De-escalation"],
  "issueCount": 3,
  "scenarioRoleplay": true,
  "scenarioBrief": "The character is a close friend overwhelmed by exams and a part-time job; the learner practises listening and offering support"
}
\`\`\`

Omit \`scenarioRoleplay\` and \`scenarioBrief\` entirely for ordinary build-an-artefact PBL projects.

---

## Important Reminders

**Top-level response shape (these come first because they are most often violated):**

1. Return exactly one JSON **object** — never a bare array.
2. That object MUST have \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars), and \`outlines\` (array) as top-level keys. Omitting any is a failure.
3. Do not wrap the object in prose, markdown, or code fences.

**Scene-level rules:**

4. \`type\` is one of \`"slide"\`, \`"quiz"\`, \`"interactive"\`, \`"pbl"\`.
5. \`quiz\` scenes must include \`quizConfig\`.
6. \`interactive\` scenes must include \`widgetType\` and \`widgetOutline\` (preferred). \`interactiveConfig\` is deprecated and only accepted for backwards compatibility.
7. \`pbl\` scenes must include \`pblConfig\` with \`projectTopic\`, \`projectDescription\`, \`targetSkills\`, \`issueCount\`.
8. Arrange scenes by inferred duration (typically 1-2 scenes per minute). Insert quizzes at appropriate points. Use interactive scenes sparingly (max 1-2 per course).
9. **Language**: Infer from the user's requirement text and context. Output all scene content in the inferred language.
10. Regardless of information completeness, always output conforming JSON - do not ask questions or request more information
11. **No teacher identity on slides**: Scene titles and keyPoints must be neutral and topic-focused. Never include the teacher's name or role (e.g., avoid "Teacher Wang's Tips", "Teacher's Wishes"). Use generic labels like "Tips", "Summary", "Key Takeaways" instead.",
  "user": "Please generate scene outlines based on the following course requirements.

---

## User Requirements

用中文讲解光合作用

---

## Student Profile

Student: Lin — Middle-school learner

Consider this student's background when designing the course. Adapt difficulty, examples, and teaching approach accordingly.

---

## Language Context

Infer the course language directive by applying the decision rules from the system prompt. Key reminders:
- Requirement language = teaching language (unless overridden by explicit request or learner context)
- Foreign language learning → teach in user's native language, not the target language
- PDF language does NOT override teaching language — translate/explain document content instead

---

## Reference Materials

### PDF Content Summary

Source notes about chlorophyll.

### Available Images

- **img_2**: image from biology.pdf page 2 | size: 800×600 (aspect ratio 1.33) [see attached]

### Web Search Results

A current source summary.

Teacher Persona:
Use a Socratic style.

---

## Output Requirements

Please automatically infer the following from user requirements:

- Course topic and core content
- Target audience and difficulty level
- Course duration (default 15-30 minutes if not specified)
- Teaching style (formal/casual/interactive/academic)
- Visual style (minimal/colorful/professional/playful)

Then output your response as a single JSON object.

**Top-level shape — this is what you MUST return:**

\`\`\`json
{
  "languageDirective": "2-5 sentence instruction describing the course language behavior",
  "courseTitle": "concise course name, ≤30 chars, in the teaching language",
  "outlines": [ /* array of scene objects, schema described below */ ]
}
\`\`\`

Never return a bare array. Never omit \`languageDirective\` or \`courseTitle\`. All three keys are required.

**Each scene inside the \`outlines\` array has this minimum shape:**

\`\`\`json
{
  "id": "scene_1",
  "type": "slide" | "quiz" | "interactive" | "pbl",
  "title": "Scene Title",
  "description": "Teaching purpose description",
  "keyPoints": ["Point 1", "Point 2", "Point 3"],
  "order": 1
}
\`\`\`

### Special Notes

- **quiz scenes must include quizConfig**:
   \`\`\`json
   "quizConfig": {
     "questionCount": 2,
     "difficulty": "easy" | "medium" | "hard",
     "questionTypes": ["single", "multiple"]
   }
   \`\`\`

- **If source images are available**, add \`suggestedImageIds\` to relevant slide scenes. Only use image IDs listed under Available Images.

- **Interactive scenes**: If a concept benefits from hands-on simulation/visualization, use \`"type": "interactive"\` with \`widgetType\` and \`widgetOutline\` fields. Limit to 1-2 per course.
   - Select widgetType based on concept: simulation (physics/chem), diagram (processes), code (programming), game (practice), visualization3d (3D models)
   - Provide appropriate widgetOutline for the widget type
- **Scene count**: Based on inferred duration, typically 1-2 scenes per minute
- **Quiz placement**: Recommend inserting a quiz every 3-5 slides for assessment
- **Language**: Infer from the user's requirement text and context, then output all content in the inferred language
- **If web search results are provided**, reference specific findings and sources in scene descriptions and keyPoints. The search results provide up-to-date information — incorporate it to make the course content current and accurate.

**Final reminder**: your entire response must be a JSON **object** with exactly three top-level keys — \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars, in the teaching language), and \`outlines\` (array). Do not return a bare array. Do not wrap in prose or code fences.",
}
`;

exports[`buildOutlinePrompt golden output > pins image and media conditionals on with video off 1`] = `
{
  "system": "# Scene Outline Generator

You are a professional course content designer, skilled at transforming user requirements into structured scene outlines.

## Core Task

Based on the user's free-form requirement text, automatically infer course details and generate a series of scene outlines (SceneOutline).

**Key Capabilities**:

1. Extract from requirement text: topic, target audience, duration, style, etc.
2. Make reasonable default assumptions when information is insufficient
3. Generate structured outlines to prepare for subsequent teaching action generation

---

## Language Inference

Infer the course language from all available signals and produce:

1. **\`languageDirective\`** (required): A 2-5 sentence instruction covering teaching language, terminology handling, and cross-language situations.
2. **\`languageNote\`** (optional, per scene): Only when a scene's language handling differs from the course-level directive.

### Decision rules (apply in order)

1. **Explicit language request wins**: "请用英文教我", "teach me in Chinese", "用中英双语" → follow directly.

2. **Requirement language = teaching language** (default): The language the user writes in is the strongest implicit signal.

3. **Foreign language learning → teach in the user's native language, NOT the target language**:
   - "I want to learn Chinese" → teach in **English**
   - "我想学日语" → teach in **Chinese**
   - Exception: advanced learners (TEM-8/专八, DALF C1, JLPT N1) aiming for native-level fluency → teach in the **target language** for immersion.

4. **Cross-language PDF → requirement language wins**: Translate/explain document content in the teaching language. Never let the PDF language override the requirement language.

5. **Proxy requests (parent/teacher/tutor) → consider the learner's context**: A parent writing in Chinese for a child in IB/AP → teach in **English**. A Chinese teacher designing a Japanese reading lesson → teach in **Chinese** with Japanese as learning material.

6. **Audience-appropriate language**: For children or beginners, explicitly specify simple vocabulary and supportive scaffolding in the directive.

### Terminology

- **Programming / product names** (Python, Docker, ComfyUI): keep in English.
- **Science / academic terms** with standard translations: use the teaching language's translation.
- **Emerging tech terms** (AI/ML): show bilingually.
- **User's explicit request** about terminology overrides the above defaults.

### Course Title

Produce a **\`courseTitle\`** (required): a concise, human-readable name for the **entire course**. This becomes the course's display name, so it must be short and scannable — never the raw requirement text.

- **Length**: ≤ 30 characters (roughly one short phrase). Hard cap; if the concept is long, compress it.
- **Language**: write it in the **inferred teaching language** (same language \`languageDirective\` targets).
- **Style**: a noun phrase summarizing the topic — e.g. "抛体运动入门", "Intro to Recursion", "光合作用原理". Not a sentence, not a question.
- **Do NOT** include: quotes, numbering, leading emojis, the teacher's name/role, or words like "Course"/"课程"/"A course about".
- If the requirement is already a crisp title, you may reuse it (trimmed to the limit). If it is a long prompt, distill it to its essence.

---

## Design Principles

### MAIC Platform Technical Constraints

- **Scene Types**: \`slide\` (presentation), \`quiz\` (assessment), \`interactive\` (interactive visualization), and \`pbl\` (project-based learning) are supported
- **Slide Scene**: Static PPT pages supporting text, charts, formulas, and other visual components.
- **Quiz Scene**: Supports single-choice, multiple-choice, and short-answer (text) questions
- **Interactive Scene**: Self-contained interactive HTML page rendered in an iframe, ideal for simulations and visualizations
- **PBL Scene**: Complete project-based learning module with roles, issues, and collaboration workflow. Ideal for complex projects, engineering practice, and research tasks
- **Duration Control**: Each scene should be 1-3 minutes (PBL scenes are longer, typically 15-30 minutes)

### Instructional Design Principles

- **Clear Purpose**: Each scene has a clear teaching function
- **Logical Flow**: Scenes form a natural teaching progression
- **Experience Design**: Consider learning experience and emotional response from the student's perspective

---

## Default Assumption Rules

When user requirements don't specify, use these defaults:

| Information         | Default Value          |
| ------------------- | ---------------------- |
| Course Duration     | 15-20 minutes          |
| Target Audience     | General learners       |
| Teaching Style      | Interactive (engaging) |
| Visual Style        | Professional           |
| Interactivity Level | Medium                 |

---

## Special Element Design Guidelines

### Chart Elements

When content needs visualization, specify chart requirements in keyPoints:

- **Chart Types**: bar, line, pie, radar
- **Data Description**: Briefly describe data content and display purpose

Example keyPoints:

\`\`\`
"keyPoints": [
  "Show sales growth trend over four years",
  "[Chart] Line chart: X-axis years (2020-2023), Y-axis sales (1.2M-2.1M)",
  "Analyze growth factors and key milestones"
]
\`\`\`

### Table Elements

When comparing or listing information, specify in keyPoints:

\`\`\`
"keyPoints": [
  "Compare core metrics of three products",
  "[Table] Product A/B/C comparison: price, performance, use cases",
  "Help students understand product positioning"
]
\`\`\`


### AI-Generated Image Requests

Use image generation only for slide scenes that need a static visual and have no suitable source image.

- Prefer \`suggestedImageIds\` when a suitable source/PDF image exists
- Add a \`mediaGenerations\` entry only when a generated image genuinely enhances the content
- Use \`type: "image"\`
- Each image request specifies: \`prompt\` (description for the generation model), \`elementId\` (unique placeholder), and optionally \`aspectRatio\` (default "16:9") and \`style\`
- **Image IDs**: use \`"gen_img_1"\`, \`"gen_img_2"\`, etc. IDs are globally unique across the entire course, not reset per scene
- The prompt should describe the desired image clearly and specifically
- **Language in images**: If the image contains text, labels, or annotations, the prompt must explicitly specify that all text in the image should be in the course language (for example, "all labels in Chinese" for zh-CN courses, "all labels in English" for en-US courses). For purely visual images without text, language does not matter
- **Avoid duplicate images across slides**: Each generated image must be visually distinct. Do not request near-identical images for different slides. If multiple slides cover the same topic, vary the visual angle, scope, or style
- **Cross-scene reuse**: To reuse a generated image in a different scene, reference the same \`elementId\` in the later scene's content without adding a new \`mediaGenerations\` entry. Only the scene that first defines the \`elementId\` in its \`mediaGenerations\` should include the generation request
- Use generated images for static content: diagrams, charts, illustrations, portraits, landscapes

Image example:

\`\`\`json
"mediaGenerations": [
  {
    "type": "image",
    "prompt": "A colorful diagram showing the water cycle with evaporation, condensation, and precipitation arrows",
    "elementId": "gen_img_1",
    "aspectRatio": "16:9"
  }
]
\`\`\`





### Content Safety Guidelines for Generation Prompts

To avoid blocked requests from the generation model:

- Do not describe specific human facial features, body details, or physical appearance; use abstract or iconographic representations such as "a silhouette of a person"
- Do not include violence, weapons, blood, or gore
- Do not reference politically sensitive content: national flags, military imagery, or real political figures
- Do not depict real public figures or celebrities by name or likeness
- Prefer abstract, diagrammatic, infographic, or icon-based styles for educational illustrations
- Keep all prompts academic and education-oriented in tone


### Interactive Scene Guidelines

Use \`interactive\` type when a concept benefits significantly from hands-on interaction and visualization. Good candidates include:

- **Physics simulations**: Force composition, projectile motion, wave interference, circuits
- **Math visualizations**: Function graphing, geometric transformations, probability distributions
- **Data exploration**: Interactive charts, statistical sampling, regression fitting
- **Chemistry**: Molecular structure, reaction balancing, pH titration
- **Programming concepts**: Algorithm visualization, data structure operations

**Constraints**:

- Limit to **1-2 interactive scenes per course** (they are resource-intensive)
- Interactive scenes **require** an \`interactiveConfig\` object
- Do NOT use interactive for purely textual/conceptual content - use slides instead
- The \`interactiveConfig.designIdea\` should describe the specific interactive elements and user interactions

### Widget Type Selection for Interactive Scenes

When generating an interactive scene, you MUST select the appropriate widget type and provide widgetOutline:

**Selection Logic:**

| Concept Characteristics | Widget Type | widgetOutline Fields |
|-------------------------|-------------|---------------------|
| Physics/chemistry phenomena with adjustable parameters | \`simulation\` | \`concept\`, \`keyVariables\` |
| Processes, workflows, cause-effect chains | \`diagram\` | \`diagramType\` |
| Programming concepts, algorithms | \`code\` | \`language\` |
| Practice activities, gamified assessment | \`game\` | \`gameType\`, \`challenge\` |
| Biological/geometric structures, 3D models | \`visualization3d\` | \`visualizationType\`, \`objects\` |

**widgetOutline Format by Type:**

\`\`\`json
// simulation
"widgetOutline": {
  "concept": "concept_name",
  "keyVariables": ["variable1", "variable2"]
}

// diagram
"widgetOutline": {
  "diagramType": "flowchart"
}

// code
"widgetOutline": {
  "language": "python"
}

// game
"widgetOutline": {
  "gameType": "action",
  "challenge": "description of what player controls"
}

// visualization3d
"widgetOutline": {
  "visualizationType": "solar",
  "objects": ["sun", "earth", "mars"]
}
\`\`\`

**CRITICAL:** Every interactive scene MUST include both \`widgetType\` and \`widgetOutline\` fields. Interactive scenes without these are INVALID.

### PBL Scene Guidelines

Use \`pbl\` type when the course involves complex, multi-step project work that benefits from structured collaboration. Good candidates include:

- **Engineering projects**: Software development, hardware design, system architecture
- **Research projects**: Scientific research, data analysis, literature review
- **Design projects**: Product design, UX research, creative projects
- **Business projects**: Business plans, market analysis, strategy development

**Constraints**:

- Limit to **at most 1 PBL scene per course** (they are comprehensive and long)
- PBL scenes **require** a \`pblConfig\` object with: projectTopic, projectDescription, targetSkills, issueCount
- PBL is for substantial project work - do NOT use for simple exercises or single-step tasks
- The \`pblConfig.targetSkills\` should list 2-5 specific skills students will develop
- The \`pblConfig.issueCount\` should typically be 2-5 issues

**Role-play scenario PBL (optional PBL sub-type)**:

Some PBL projects are best learned by *practising an interpersonal or situational interaction* rather than by building an artefact — for example practising a difficult conversation, a negotiation, a job interview, a customer-service exchange, a debate, a role-play game (e.g. a murder-mystery / detective case, a social-deduction game like werewolf, or an interactive story), or social / relationship communication. When the core of the learning really is the interaction itself (the learner will converse with one or more in-character roles inside an immersive scene), additionally set inside \`pblConfig\`:

- \`scenarioRoleplay: true\` — marks this PBL as a role-play scenario.
- \`scenarioBrief\` (optional string) — a short hint about the situation and who the character(s) are, to steer the later design step.

Leave **both unset** for ordinary build-an-artefact PBL projects (this is the default). Only use \`scenarioRoleplay\` when the practice of the interaction is the point. This does not change how you choose the scene \`type\` — it is still \`pbl\`; these two fields are an optional flavour *inside* a PBL scene.

**Important:** \`pblConfig.scenarioRoleplay\` is the downstream runtime switch. If the user explicitly asks for a role-play / scenario-simulation PBL, do not return an ordinary PBL; set \`scenarioRoleplay: true\` and include a concrete \`scenarioBrief\`.

---

## Output Format

### Top-level shape — NON-NEGOTIABLE

Your entire response MUST be a single JSON **object** with exactly these three top-level keys:

\`\`\`json
{
  "languageDirective": "<the directive you inferred in the Language Inference step>",
  "courseTitle": "<concise course name, ≤30 chars, in the teaching language>",
  "outlines": [ /* array of scene objects */ ]
}
\`\`\`

Rules:

- **Never** return a bare array. The top level is an object, not an array.
- **Never** omit \`languageDirective\` or \`courseTitle\`. Both are required even if you think they are obvious.
- **Never** wrap the response in any other structure, prose, or code fence.

### Minimal complete example

\`\`\`json
{
  "languageDirective": "Deliver the entire course in English. Use simple vocabulary suitable for a beginner.",
  "courseTitle": "Intro to Projectile Motion",
  "outlines": [
    {
      "id": "scene_1",
      "type": "slide",
      "title": "Introduction",
      "description": "Welcome students and introduce the core concept.",
      "keyPoints": ["Context", "Agenda", "Goals"],
      "order": 1
    },
    {
      "id": "scene_2",
      "type": "interactive",
      "title": "Interactive Exploration",
      "description": "Students explore the concept via a hands-on simulation.",
      "keyPoints": ["Observe variable 1", "Observe variable 2"],
      "order": 2,
      "widgetType": "simulation",
      "widgetOutline": {
        "concept": "Projectile Motion",
        "keyVariables": ["angle", "velocity"]
      }
    },
    {
      "id": "scene_3",
      "type": "quiz",
      "title": "Knowledge Check",
      "description": "Test student understanding of the key concepts.",
      "keyPoints": ["Test point 1", "Test point 2"],
      "order": 3,
      "quizConfig": {
        "questionCount": 2,
        "difficulty": "medium",
        "questionTypes": ["single", "multiple"]
      }
    }
  ]
}
\`\`\`

### Scene field descriptions

| Field             | Type                     | Required | Description                                                                                      |
| ----------------- | ------------------------ | -------- | ------------------------------------------------------------------------------------------------ |
| id                | string                   | ✅       | Unique identifier, format: \`scene_1\`, \`scene_2\`...                                               |
| type              | string                   | ✅       | \`"slide"\`, \`"quiz"\`, \`"interactive"\`, or \`"pbl"\`                                                 |
| title             | string                   | ✅       | Scene title, concise and clear                                                                   |
| description       | string                   | ✅       | 1-2 sentences describing teaching purpose                                                        |
| keyPoints         | string[]                 | ✅       | 3-5 core points                                                                                  |
| teachingObjective | string                   | ❌       | Corresponding learning objective                                                                 |
| estimatedDuration | number                   | ❌       | Estimated duration (seconds)                                                                     |
| order             | number                   | ✅       | Sort order, starting from 1                                                                      |


| mediaGenerations  | MediaGenerationRequest[] | ❌       | AI-generated media requests when generated media would enhance a slide scene                     |

| quizConfig        | object                   | ❌       | Required for quiz type, contains questionCount/difficulty/questionTypes                          |
| interactiveConfig | object                   | ❌ (deprecated) | Legacy: use widgetType + widgetOutline instead                                                                                       |
| widgetType        | string                   | ✅ (for interactive) | Widget type: "simulation", "diagram", "code", "game", "visualization3d"                                                 |
| widgetOutline     | object                   | ✅ (for interactive) | Widget-specific configuration (see Widget Type Selection)                                                               |
| pblConfig         | object                   | ❌       | Required for pbl type, contains projectTopic/projectDescription/targetSkills/issueCount/language |

### quizConfig Structure

\`\`\`json
{
  "questionCount": 2,
  "difficulty": "easy" | "medium" | "hard",
  "questionTypes": ["single", "multiple", "short_answer"]
}
\`\`\`

### interactiveConfig Structure

\`\`\`json
{
  "conceptName": "Name of the concept to visualize",
  "conceptOverview": "Brief description of what this interactive demonstrates",
  "designIdea": "Detailed description of interactive elements and user interactions",
  "subject": "Subject area (e.g., Physics, Mathematics)"
}
\`\`\`

### pblConfig Structure

\`\`\`json
{
  "projectTopic": "Main topic of the project",
  "projectDescription": "Brief description of what students will build/accomplish",
  "targetSkills": ["Skill 1", "Skill 2", "Skill 3"],
  "issueCount": 3
}
\`\`\`

For a **role-play scenario** PBL (see PBL Scene Guidelines), additionally include the two optional fields:

\`\`\`json
{
  "projectTopic": "Practise comforting a stressed friend",
  "projectDescription": "Have a supportive conversation with a friend who is going through a hard week",
  "targetSkills": ["Active listening", "Empathetic responding", "De-escalation"],
  "issueCount": 3,
  "scenarioRoleplay": true,
  "scenarioBrief": "The character is a close friend overwhelmed by exams and a part-time job; the learner practises listening and offering support"
}
\`\`\`

Omit \`scenarioRoleplay\` and \`scenarioBrief\` entirely for ordinary build-an-artefact PBL projects.

---

## Important Reminders

**Top-level response shape (these come first because they are most often violated):**

1. Return exactly one JSON **object** — never a bare array.
2. That object MUST have \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars), and \`outlines\` (array) as top-level keys. Omitting any is a failure.
3. Do not wrap the object in prose, markdown, or code fences.

**Scene-level rules:**

4. \`type\` is one of \`"slide"\`, \`"quiz"\`, \`"interactive"\`, \`"pbl"\`.
5. \`quiz\` scenes must include \`quizConfig\`.
6. \`interactive\` scenes must include \`widgetType\` and \`widgetOutline\` (preferred). \`interactiveConfig\` is deprecated and only accepted for backwards compatibility.
7. \`pbl\` scenes must include \`pblConfig\` with \`projectTopic\`, \`projectDescription\`, \`targetSkills\`, \`issueCount\`.
8. Arrange scenes by inferred duration (typically 1-2 scenes per minute). Insert quizzes at appropriate points. Use interactive scenes sparingly (max 1-2 per course).
9. **Language**: Infer from the user's requirement text and context. Output all scene content in the inferred language.
10. Regardless of information completeness, always output conforming JSON - do not ask questions or request more information
11. **No teacher identity on slides**: Scene titles and keyPoints must be neutral and topic-focused. Never include the teacher's name or role (e.g., avoid "Teacher Wang's Tips", "Teacher's Wishes"). Use generic labels like "Tips", "Summary", "Key Takeaways" instead.",
  "user": "Please generate scene outlines based on the following course requirements.

---

## User Requirements

Explain the water cycle with generated diagrams

---



## Language Context

Infer the course language directive by applying the decision rules from the system prompt. Key reminders:
- Requirement language = teaching language (unless overridden by explicit request or learner context)
- Foreign language learning → teach in user's native language, not the target language
- PDF language does NOT override teaching language — translate/explain document content instead

---

## Reference Materials

### PDF Content Summary

None

### Available Images

No images available

### Web Search Results

None



---

## Output Requirements

Please automatically infer the following from user requirements:

- Course topic and core content
- Target audience and difficulty level
- Course duration (default 15-30 minutes if not specified)
- Teaching style (formal/casual/interactive/academic)
- Visual style (minimal/colorful/professional/playful)

Then output your response as a single JSON object.

**Top-level shape — this is what you MUST return:**

\`\`\`json
{
  "languageDirective": "2-5 sentence instruction describing the course language behavior",
  "courseTitle": "concise course name, ≤30 chars, in the teaching language",
  "outlines": [ /* array of scene objects, schema described below */ ]
}
\`\`\`

Never return a bare array. Never omit \`languageDirective\` or \`courseTitle\`. All three keys are required.

**Each scene inside the \`outlines\` array has this minimum shape:**

\`\`\`json
{
  "id": "scene_1",
  "type": "slide" | "quiz" | "interactive" | "pbl",
  "title": "Scene Title",
  "description": "Teaching purpose description",
  "keyPoints": ["Point 1", "Point 2", "Point 3"],
  "order": 1
}
\`\`\`

### Special Notes

- **quiz scenes must include quizConfig**:
   \`\`\`json
   "quizConfig": {
     "questionCount": 2,
     "difficulty": "easy" | "medium" | "hard",
     "questionTypes": ["single", "multiple"]
   }
   \`\`\`

- **Interactive scenes**: If a concept benefits from hands-on simulation/visualization, use \`"type": "interactive"\` with \`widgetType\` and \`widgetOutline\` fields. Limit to 1-2 per course.
   - Select widgetType based on concept: simulation (physics/chem), diagram (processes), code (programming), game (practice), visualization3d (3D models)
   - Provide appropriate widgetOutline for the widget type
- **Scene count**: Based on inferred duration, typically 1-2 scenes per minute
- **Quiz placement**: Recommend inserting a quiz every 3-5 slides for assessment
- **Language**: Infer from the user's requirement text and context, then output all content in the inferred language
- **If web search results are provided**, reference specific findings and sources in scene descriptions and keyPoints. The search results provide up-to-date information — incorporate it to make the course content current and accurate.

**Final reminder**: your entire response must be a JSON **object** with exactly three top-level keys — \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars, in the teaching language), and \`outlines\` (array). Do not return a bare array. Do not wrap in prose or code fences.",
}
`;

exports[`buildOutlinePrompt golden output > pins source-image conditionals on with generated media off 1`] = `
{
  "system": "# Scene Outline Generator

You are a professional course content designer, skilled at transforming user requirements into structured scene outlines.

## Core Task

Based on the user's free-form requirement text, automatically infer course details and generate a series of scene outlines (SceneOutline).

**Key Capabilities**:

1. Extract from requirement text: topic, target audience, duration, style, etc.
2. Make reasonable default assumptions when information is insufficient
3. Generate structured outlines to prepare for subsequent teaching action generation

---

## Language Inference

Infer the course language from all available signals and produce:

1. **\`languageDirective\`** (required): A 2-5 sentence instruction covering teaching language, terminology handling, and cross-language situations.
2. **\`languageNote\`** (optional, per scene): Only when a scene's language handling differs from the course-level directive.

### Decision rules (apply in order)

1. **Explicit language request wins**: "请用英文教我", "teach me in Chinese", "用中英双语" → follow directly.

2. **Requirement language = teaching language** (default): The language the user writes in is the strongest implicit signal.

3. **Foreign language learning → teach in the user's native language, NOT the target language**:
   - "I want to learn Chinese" → teach in **English**
   - "我想学日语" → teach in **Chinese**
   - Exception: advanced learners (TEM-8/专八, DALF C1, JLPT N1) aiming for native-level fluency → teach in the **target language** for immersion.

4. **Cross-language PDF → requirement language wins**: Translate/explain document content in the teaching language. Never let the PDF language override the requirement language.

5. **Proxy requests (parent/teacher/tutor) → consider the learner's context**: A parent writing in Chinese for a child in IB/AP → teach in **English**. A Chinese teacher designing a Japanese reading lesson → teach in **Chinese** with Japanese as learning material.

6. **Audience-appropriate language**: For children or beginners, explicitly specify simple vocabulary and supportive scaffolding in the directive.

### Terminology

- **Programming / product names** (Python, Docker, ComfyUI): keep in English.
- **Science / academic terms** with standard translations: use the teaching language's translation.
- **Emerging tech terms** (AI/ML): show bilingually.
- **User's explicit request** about terminology overrides the above defaults.

### Course Title

Produce a **\`courseTitle\`** (required): a concise, human-readable name for the **entire course**. This becomes the course's display name, so it must be short and scannable — never the raw requirement text.

- **Length**: ≤ 30 characters (roughly one short phrase). Hard cap; if the concept is long, compress it.
- **Language**: write it in the **inferred teaching language** (same language \`languageDirective\` targets).
- **Style**: a noun phrase summarizing the topic — e.g. "抛体运动入门", "Intro to Recursion", "光合作用原理". Not a sentence, not a question.
- **Do NOT** include: quotes, numbering, leading emojis, the teacher's name/role, or words like "Course"/"课程"/"A course about".
- If the requirement is already a crisp title, you may reuse it (trimmed to the limit). If it is a long prompt, distill it to its essence.

---

## Design Principles

### MAIC Platform Technical Constraints

- **Scene Types**: \`slide\` (presentation), \`quiz\` (assessment), \`interactive\` (interactive visualization), and \`pbl\` (project-based learning) are supported
- **Slide Scene**: Static PPT pages supporting text, charts, formulas, and other visual components.
- **Quiz Scene**: Supports single-choice, multiple-choice, and short-answer (text) questions
- **Interactive Scene**: Self-contained interactive HTML page rendered in an iframe, ideal for simulations and visualizations
- **PBL Scene**: Complete project-based learning module with roles, issues, and collaboration workflow. Ideal for complex projects, engineering practice, and research tasks
- **Duration Control**: Each scene should be 1-3 minutes (PBL scenes are longer, typically 15-30 minutes)

### Instructional Design Principles

- **Clear Purpose**: Each scene has a clear teaching function
- **Logical Flow**: Scenes form a natural teaching progression
- **Experience Design**: Consider learning experience and emotional response from the student's perspective

---

## Default Assumption Rules

When user requirements don't specify, use these defaults:

| Information         | Default Value          |
| ------------------- | ---------------------- |
| Course Duration     | 15-20 minutes          |
| Target Audience     | General learners       |
| Teaching Style      | Interactive (engaging) |
| Visual Style        | Professional           |
| Interactivity Level | Medium                 |

---

## Special Element Design Guidelines

### Chart Elements

When content needs visualization, specify chart requirements in keyPoints:

- **Chart Types**: bar, line, pie, radar
- **Data Description**: Briefly describe data content and display purpose

Example keyPoints:

\`\`\`
"keyPoints": [
  "Show sales growth trend over four years",
  "[Chart] Line chart: X-axis years (2020-2023), Y-axis sales (1.2M-2.1M)",
  "Analyze growth factors and key milestones"
]
\`\`\`

### Table Elements

When comparing or listing information, specify in keyPoints:

\`\`\`
"keyPoints": [
  "Compare core metrics of three products",
  "[Table] Product A/B/C comparison: price, performance, use cases",
  "Help students understand product positioning"
]
\`\`\`







### Interactive Scene Guidelines

Use \`interactive\` type when a concept benefits significantly from hands-on interaction and visualization. Good candidates include:

- **Physics simulations**: Force composition, projectile motion, wave interference, circuits
- **Math visualizations**: Function graphing, geometric transformations, probability distributions
- **Data exploration**: Interactive charts, statistical sampling, regression fitting
- **Chemistry**: Molecular structure, reaction balancing, pH titration
- **Programming concepts**: Algorithm visualization, data structure operations

**Constraints**:

- Limit to **1-2 interactive scenes per course** (they are resource-intensive)
- Interactive scenes **require** an \`interactiveConfig\` object
- Do NOT use interactive for purely textual/conceptual content - use slides instead
- The \`interactiveConfig.designIdea\` should describe the specific interactive elements and user interactions

### Widget Type Selection for Interactive Scenes

When generating an interactive scene, you MUST select the appropriate widget type and provide widgetOutline:

**Selection Logic:**

| Concept Characteristics | Widget Type | widgetOutline Fields |
|-------------------------|-------------|---------------------|
| Physics/chemistry phenomena with adjustable parameters | \`simulation\` | \`concept\`, \`keyVariables\` |
| Processes, workflows, cause-effect chains | \`diagram\` | \`diagramType\` |
| Programming concepts, algorithms | \`code\` | \`language\` |
| Practice activities, gamified assessment | \`game\` | \`gameType\`, \`challenge\` |
| Biological/geometric structures, 3D models | \`visualization3d\` | \`visualizationType\`, \`objects\` |

**widgetOutline Format by Type:**

\`\`\`json
// simulation
"widgetOutline": {
  "concept": "concept_name",
  "keyVariables": ["variable1", "variable2"]
}

// diagram
"widgetOutline": {
  "diagramType": "flowchart"
}

// code
"widgetOutline": {
  "language": "python"
}

// game
"widgetOutline": {
  "gameType": "action",
  "challenge": "description of what player controls"
}

// visualization3d
"widgetOutline": {
  "visualizationType": "solar",
  "objects": ["sun", "earth", "mars"]
}
\`\`\`

**CRITICAL:** Every interactive scene MUST include both \`widgetType\` and \`widgetOutline\` fields. Interactive scenes without these are INVALID.

### PBL Scene Guidelines

Use \`pbl\` type when the course involves complex, multi-step project work that benefits from structured collaboration. Good candidates include:

- **Engineering projects**: Software development, hardware design, system architecture
- **Research projects**: Scientific research, data analysis, literature review
- **Design projects**: Product design, UX research, creative projects
- **Business projects**: Business plans, market analysis, strategy development

**Constraints**:

- Limit to **at most 1 PBL scene per course** (they are comprehensive and long)
- PBL scenes **require** a \`pblConfig\` object with: projectTopic, projectDescription, targetSkills, issueCount
- PBL is for substantial project work - do NOT use for simple exercises or single-step tasks
- The \`pblConfig.targetSkills\` should list 2-5 specific skills students will develop
- The \`pblConfig.issueCount\` should typically be 2-5 issues

**Role-play scenario PBL (optional PBL sub-type)**:

Some PBL projects are best learned by *practising an interpersonal or situational interaction* rather than by building an artefact — for example practising a difficult conversation, a negotiation, a job interview, a customer-service exchange, a debate, a role-play game (e.g. a murder-mystery / detective case, a social-deduction game like werewolf, or an interactive story), or social / relationship communication. When the core of the learning really is the interaction itself (the learner will converse with one or more in-character roles inside an immersive scene), additionally set inside \`pblConfig\`:

- \`scenarioRoleplay: true\` — marks this PBL as a role-play scenario.
- \`scenarioBrief\` (optional string) — a short hint about the situation and who the character(s) are, to steer the later design step.

Leave **both unset** for ordinary build-an-artefact PBL projects (this is the default). Only use \`scenarioRoleplay\` when the practice of the interaction is the point. This does not change how you choose the scene \`type\` — it is still \`pbl\`; these two fields are an optional flavour *inside* a PBL scene.

**Important:** \`pblConfig.scenarioRoleplay\` is the downstream runtime switch. If the user explicitly asks for a role-play / scenario-simulation PBL, do not return an ordinary PBL; set \`scenarioRoleplay: true\` and include a concrete \`scenarioBrief\`.

---

## Output Format

### Top-level shape — NON-NEGOTIABLE

Your entire response MUST be a single JSON **object** with exactly these three top-level keys:

\`\`\`json
{
  "languageDirective": "<the directive you inferred in the Language Inference step>",
  "courseTitle": "<concise course name, ≤30 chars, in the teaching language>",
  "outlines": [ /* array of scene objects */ ]
}
\`\`\`

Rules:

- **Never** return a bare array. The top level is an object, not an array.
- **Never** omit \`languageDirective\` or \`courseTitle\`. Both are required even if you think they are obvious.
- **Never** wrap the response in any other structure, prose, or code fence.

### Minimal complete example

\`\`\`json
{
  "languageDirective": "Deliver the entire course in English. Use simple vocabulary suitable for a beginner.",
  "courseTitle": "Intro to Projectile Motion",
  "outlines": [
    {
      "id": "scene_1",
      "type": "slide",
      "title": "Introduction",
      "description": "Welcome students and introduce the core concept.",
      "keyPoints": ["Context", "Agenda", "Goals"],
      "order": 1
    },
    {
      "id": "scene_2",
      "type": "interactive",
      "title": "Interactive Exploration",
      "description": "Students explore the concept via a hands-on simulation.",
      "keyPoints": ["Observe variable 1", "Observe variable 2"],
      "order": 2,
      "widgetType": "simulation",
      "widgetOutline": {
        "concept": "Projectile Motion",
        "keyVariables": ["angle", "velocity"]
      }
    },
    {
      "id": "scene_3",
      "type": "quiz",
      "title": "Knowledge Check",
      "description": "Test student understanding of the key concepts.",
      "keyPoints": ["Test point 1", "Test point 2"],
      "order": 3,
      "quizConfig": {
        "questionCount": 2,
        "difficulty": "medium",
        "questionTypes": ["single", "multiple"]
      }
    }
  ]
}
\`\`\`

### Scene field descriptions

| Field             | Type                     | Required | Description                                                                                      |
| ----------------- | ------------------------ | -------- | ------------------------------------------------------------------------------------------------ |
| id                | string                   | ✅       | Unique identifier, format: \`scene_1\`, \`scene_2\`...                                               |
| type              | string                   | ✅       | \`"slide"\`, \`"quiz"\`, \`"interactive"\`, or \`"pbl"\`                                                 |
| title             | string                   | ✅       | Scene title, concise and clear                                                                   |
| description       | string                   | ✅       | 1-2 sentences describing teaching purpose                                                        |
| keyPoints         | string[]                 | ✅       | 3-5 core points                                                                                  |
| teachingObjective | string                   | ❌       | Corresponding learning objective                                                                 |
| estimatedDuration | number                   | ❌       | Estimated duration (seconds)                                                                     |
| order             | number                   | ✅       | Sort order, starting from 1                                                                      |

| suggestedImageIds | string[]                 | ❌       | Suggested image IDs to use                                                                       |


| quizConfig        | object                   | ❌       | Required for quiz type, contains questionCount/difficulty/questionTypes                          |
| interactiveConfig | object                   | ❌ (deprecated) | Legacy: use widgetType + widgetOutline instead                                                                                       |
| widgetType        | string                   | ✅ (for interactive) | Widget type: "simulation", "diagram", "code", "game", "visualization3d"                                                 |
| widgetOutline     | object                   | ✅ (for interactive) | Widget-specific configuration (see Widget Type Selection)                                                               |
| pblConfig         | object                   | ❌       | Required for pbl type, contains projectTopic/projectDescription/targetSkills/issueCount/language |

### quizConfig Structure

\`\`\`json
{
  "questionCount": 2,
  "difficulty": "easy" | "medium" | "hard",
  "questionTypes": ["single", "multiple", "short_answer"]
}
\`\`\`

### interactiveConfig Structure

\`\`\`json
{
  "conceptName": "Name of the concept to visualize",
  "conceptOverview": "Brief description of what this interactive demonstrates",
  "designIdea": "Detailed description of interactive elements and user interactions",
  "subject": "Subject area (e.g., Physics, Mathematics)"
}
\`\`\`

### pblConfig Structure

\`\`\`json
{
  "projectTopic": "Main topic of the project",
  "projectDescription": "Brief description of what students will build/accomplish",
  "targetSkills": ["Skill 1", "Skill 2", "Skill 3"],
  "issueCount": 3
}
\`\`\`

For a **role-play scenario** PBL (see PBL Scene Guidelines), additionally include the two optional fields:

\`\`\`json
{
  "projectTopic": "Practise comforting a stressed friend",
  "projectDescription": "Have a supportive conversation with a friend who is going through a hard week",
  "targetSkills": ["Active listening", "Empathetic responding", "De-escalation"],
  "issueCount": 3,
  "scenarioRoleplay": true,
  "scenarioBrief": "The character is a close friend overwhelmed by exams and a part-time job; the learner practises listening and offering support"
}
\`\`\`

Omit \`scenarioRoleplay\` and \`scenarioBrief\` entirely for ordinary build-an-artefact PBL projects.

---

## Important Reminders

**Top-level response shape (these come first because they are most often violated):**

1. Return exactly one JSON **object** — never a bare array.
2. That object MUST have \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars), and \`outlines\` (array) as top-level keys. Omitting any is a failure.
3. Do not wrap the object in prose, markdown, or code fences.

**Scene-level rules:**

4. \`type\` is one of \`"slide"\`, \`"quiz"\`, \`"interactive"\`, \`"pbl"\`.
5. \`quiz\` scenes must include \`quizConfig\`.
6. \`interactive\` scenes must include \`widgetType\` and \`widgetOutline\` (preferred). \`interactiveConfig\` is deprecated and only accepted for backwards compatibility.
7. \`pbl\` scenes must include \`pblConfig\` with \`projectTopic\`, \`projectDescription\`, \`targetSkills\`, \`issueCount\`.
8. Arrange scenes by inferred duration (typically 1-2 scenes per minute). Insert quizzes at appropriate points. Use interactive scenes sparingly (max 1-2 per course).
9. **Language**: Infer from the user's requirement text and context. Output all scene content in the inferred language.
10. Regardless of information completeness, always output conforming JSON - do not ask questions or request more information
11. **No teacher identity on slides**: Scene titles and keyPoints must be neutral and topic-focused. Never include the teacher's name or role (e.g., avoid "Teacher Wang's Tips", "Teacher's Wishes"). Use generic labels like "Tips", "Summary", "Key Takeaways" instead.",
  "user": "Please generate scene outlines based on the following course requirements.

---

## User Requirements

Explain the labeled anatomy diagram

---



## Language Context

Infer the course language directive by applying the decision rules from the system prompt. Key reminders:
- Requirement language = teaching language (unless overridden by explicit request or learner context)
- Foreign language learning → teach in user's native language, not the target language
- PDF language does NOT override teaching language — translate/explain document content instead

---

## Reference Materials

### PDF Content Summary

None

### Available Images

- **source_1**: from cell-biology.pdf page 4 | size: 1200×900 (aspect ratio 1.33) | Labeled cross-section of a plant cell

### Web Search Results

None



---

## Output Requirements

Please automatically infer the following from user requirements:

- Course topic and core content
- Target audience and difficulty level
- Course duration (default 15-30 minutes if not specified)
- Teaching style (formal/casual/interactive/academic)
- Visual style (minimal/colorful/professional/playful)

Then output your response as a single JSON object.

**Top-level shape — this is what you MUST return:**

\`\`\`json
{
  "languageDirective": "2-5 sentence instruction describing the course language behavior",
  "courseTitle": "concise course name, ≤30 chars, in the teaching language",
  "outlines": [ /* array of scene objects, schema described below */ ]
}
\`\`\`

Never return a bare array. Never omit \`languageDirective\` or \`courseTitle\`. All three keys are required.

**Each scene inside the \`outlines\` array has this minimum shape:**

\`\`\`json
{
  "id": "scene_1",
  "type": "slide" | "quiz" | "interactive" | "pbl",
  "title": "Scene Title",
  "description": "Teaching purpose description",
  "keyPoints": ["Point 1", "Point 2", "Point 3"],
  "order": 1
}
\`\`\`

### Special Notes

- **quiz scenes must include quizConfig**:
   \`\`\`json
   "quizConfig": {
     "questionCount": 2,
     "difficulty": "easy" | "medium" | "hard",
     "questionTypes": ["single", "multiple"]
   }
   \`\`\`

- **If source images are available**, add \`suggestedImageIds\` to relevant slide scenes. Only use image IDs listed under Available Images.

- **Interactive scenes**: If a concept benefits from hands-on simulation/visualization, use \`"type": "interactive"\` with \`widgetType\` and \`widgetOutline\` fields. Limit to 1-2 per course.
   - Select widgetType based on concept: simulation (physics/chem), diagram (processes), code (programming), game (practice), visualization3d (3D models)
   - Provide appropriate widgetOutline for the widget type
- **Scene count**: Based on inferred duration, typically 1-2 scenes per minute
- **Quiz placement**: Recommend inserting a quiz every 3-5 slides for assessment
- **Language**: Infer from the user's requirement text and context, then output all content in the inferred language
- **If web search results are provided**, reference specific findings and sources in scene descriptions and keyPoints. The search results provide up-to-date information — incorporate it to make the course content current and accurate.

**Final reminder**: your entire response must be a JSON **object** with exactly three top-level keys — \`languageDirective\` (string), \`courseTitle\` (string, ≤30 chars, in the teaching language), and \`outlines\` (array). Do not return a bare array. Do not wrap in prose or code fences.",
}
`;
